# static-initialization-order

./: .clang-format  .gitignore  CMakeLists.txt
lib/cmake/: util.cmake
src/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h  my_other_class.cpp  my_other_class.h
test/: CMakeLists.txt  test_my_classes.cpp
